--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Muhaha, buzzing on github.
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Button Example</title>
+	<style type="text/css">
+		.whole{
+			margin: 20px 100px 0px 100px;
+		}
+		.input{
+			width: 100px;
+			height: 40px;
+			background: #ccc;
+		}
+		.button_go{
+			width:40px;
+			height: 40px;
+			padding: 10px 10px;
+			font: 12px/14px Arial;
+			background: yellow;
+			float: left;
+
+		}
+	</style>
+</head>
+<body>
+	<div clss="whole">
+		<div><input type="text" value="Your email adress"/></div>
+		<div class="button_go">Go</div>
+	</div>
+	
+</body>
+</html>
