--- a/index.html
+++ b/index.html
@@ -2,32 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Button Example</title>
-	<style type="text/css">
-		.whole{
-			margin: 20px 100px 0px 100px;
-		}
-		.input{
-			width: 100px;
-			height: 40px;
-			background: #ccc;
-		}
-		.button_go{
-			width:40px;
-			height: 40px;
-			padding: 10px 10px;
-			font: 12px/14px Arial;
-			background: yellow;
-			float: left;
-
-		}
-	</style>
+	<title>Buzz of Bee</title>
 </head>
 <body>
-	<div clss="whole">
-		<div><input type="text" value="Your email adress"/></div>
-		<div class="button_go">Go</div>
-	</div>
-	
+	<p>Buzz of Bee<p>
 </body>
 </html>
