--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Buzz of Bee</title>
+	<link href="favicon.ico" ref="shortcut icon" type="image/x-icon">
 </head>
 <body>
 	<p>Buzz of Bee<p>
