Mike's stuff /qq

--- a/canon03.html
+++ b/canon03.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<div id="canon01"><a href="canon02.html"></a></div>
+			<div id="canon03"><a href="canon04.html" class="short"></a></div>
 		</div>
 	</body>
 </html>
