add research section

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                 Buzz from Bee
               </a>
               <ul class="nav navbar-nav">
-                <li><a href="#section1">About</a></li>
-                <li><a href="#section2">Experience</a></li>
+                <li><a href="#section2">About</a></li>
                 <li><a href="#section3">Projects</a></li>
                 <li><a href="#section4">Contact</a></li>
               </ul>
@@ -54,11 +53,10 @@
 
     <section id="section1">
     <div class="container">
-      <h1>About</h1>
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-sm-offset-4 col-md-7 col-md-offset-5 intro">
             <div class="about-1">Hello</div>
-            <div class="about-2">This is DR. BEE</div>
+            <div class="about-2">This is Dr. Bee</div>
             <div class="about-3">I play with <span id="my-interest"></span></div>
             <div class="about-4">Keen on <em>Information Design</em>, <em>Data Visualization</em> and <em>Visual Analytics</em></div>
             <div class="about-5">Came from Xinyang, China</div>
@@ -72,7 +70,7 @@
     <hr>
 
     <section class="container" id="section2">
-      <h1>Experience</h1>
+      <h1>About</h1>
       <div id="timeline-embed"></div>
     </section>
 
@@ -83,7 +81,7 @@
     <section class="container" id="section3">
       <h1>Projects Highlight</h1>
       <div class="row">
-        <h2>Web Development</h2>
+        <h2>Web Development - [2014]</h2>
         <div class="col-xs-6 col-sm-3 project-item">
           <a href="http://50.87.248.59/~fatemida/">
           <img src="img/fatemidawat.png" alt="" class="img-responsive">
@@ -110,7 +108,7 @@
         </div>
       </div>
       <div class="row infograpics">
-        <h2>Infographics</h2>
+        <h2>Infographics - [2013]</h2>
         <div class="col-xs-6 col-sm-3 project-item">
           <img src="img/baidu_infographic1_1.png" alt="" class="img-responsive">
         </div>
@@ -122,6 +120,31 @@
         </div>
         <div class="col-xs-6 col-sm-3 project-item">
           <img src="img/baidu_infographic1_4.png" alt="" class="img-responsive">
+        </div>
+      </div>
+      <div class="row">
+        <h2>Past Research - [2010-2013]</h2>
+        <div class="col-xs-6 col-sm-3 project-item">
+          <img src="img/bee_paper_0.png" alt="" class="img-responsive">
+          <div class="title">Thesis</div>
+        </div>
+        <div class="col-xs-6 col-sm-3 project-item">
+          <a href="http://www.cob.calpoly.edu/~eli/AIS-JJAW-PACIS2013/PACIS2013-Proceedings/8-3.pdf">
+            <img src="img/bee_paper_1.png" alt="" class="img-responsive">
+            <div class="title">Virtual Community</div>
+          </a>
+        </div>
+        <div class="col-xs-6 col-sm-3 project-item">
+          <a href="http://aisel.aisnet.org/amcis2012/proceedings/SocialIssues/13/">
+            <img src="img/bee_paper_2.png" alt="" class="img-responsive">
+            <div class="title">Customer Loyalty</div>
+          </a>
+        </div>
+        <div class="col-xs-6 col-sm-3 project-item">
+          <a href="http://aisel.aisnet.org/amcis2010/197/">
+            <img src="img/bee_paper_3.png" alt="" class="img-responsive">
+            <div class="title">m-Government</div>
+          </a>
         </div>
       </div>
     </section>
