rm german aidsss

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             start_zoom_adjust:  '1',
             hash_bookmark:      true,
             debug:              true,
-            lang:               'de',  //LANGUAGE
+            lang:               'en',  //LANGUAGE
             maptype:            'watercolor',
             css:                'lib/timeline/css/timeline.css',
             js:                 'lib/timeline/js/timeline.js'
