fix timeline paddin issue

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link href="css/bee.css" rel="stylesheet">
     <link href="lib/timeline/timeline.css" rel="stylesheet">
     <link href="lib/font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet">
-<!--     <link href="lib/diamond/diamond.css" rel="stylesheet"> -->
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -71,7 +70,9 @@
 
     <section class="container" id="section2">
       <h1>About</h1>
-      <div id="timeline-embed"></div>
+      <div class="row">
+        <div id="timeline-embed"></div>
+      </div>
     </section>
 
     <hr>
