--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="img/bee_logo.png" alt="" style="width: 50px; height: 50px; margin-right: 10px;"/>
                 Dr. Bee
               </a>
-              <a href="http://bqingqing.github.io/buzz-from-bee" target="_blank">Blog: Buzz from Bee</a>
+             <!--  <a href="buzz-fromhttp://bqingqing.github.io/buzz-from-bee" target="_blank">Blog: Buzz from Bee</a> -->
               <ul class="nav navbar-nav">
                 <li><a href="#section2">About</a></li>
                 <li><a href="#section3">Projects</a></li>
